fix dropdown z-index

--- a/src/components/MuscleGroupSelection/MuscleGroupSelection.module.css
+++ b/src/components/MuscleGroupSelection/MuscleGroupSelection.module.css
@@ -7,6 +7,7 @@
   padding: 5px;
   border: solid 1px;
   background-color: #ffffff;
+  z-index: 10;
 }
 
 .bodyIcons {
